Изменения в методах для корзины и добавление удаление элемента из корзины и полная очистка корзины
