# routes/api.php
@@ -2,7 +2,7 @@
 
 use App\Http\Controllers\Auth\LoginController;
 use App\Http\Controllers\Auth\RegisterController;
-use App\Http\Controllers\GuestCartController;
+use App\Http\Controllers\CartController;
 use App\Http\Controllers\ProductController;
 use App\Http\Controllers\UserController;
 use Illuminate\Http\Request;
@@ -29,8 +29,11 @@ Route::middleware('no_token')->group(function () {
     Route::post('login', LoginController::class)->name('login');
 });
 
-Route::prefix('guest-cart')->group(function () {
-    Route::post('add', [GuestCartController::class, 'add'])->name('guest.cart.add');
+Route::prefix('cart')->group(function () {
+    Route::get('/', [CartController::class,'index'])->name('cart.index');
+    Route::post('add', [CartController::class, 'add'])->name('cart.add');
+    Route::delete('remove', [CartController::class, 'remove'])->name('cart.remove');
+    Route::delete('clear', [CartController::class, 'clear']);
 });
 
 
